--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,21 +13,21 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: Pull Docker image
+        run: |
+          docker pull tu_usuario/tu_imagen:tu_tag
+
       - name: Install xrdp and configure for root
         run: |
-          # Install xrdp
+          # Instala xrdp y realiza la configuración para root
           sudo apt-get update
           sudo apt-get install -y xrdp
-
-          # Configure xrdp to use the root user
           sudo sed -i 's/allowed_users=console/allowed_users=anybody/' /etc/X11/Xwrapper.config
-
-          # Set up the password for the root user to "admin"
           echo 'root:admin' | sudo chpasswd
 
       - name: Install ngrok
         run: |
-          # Download ngrok
+          # Instala ngrok
           wget https://bin.equinox.io/c/4VmDzA7iaHb/ngrok-stable-linux-amd64.zip
           unzip ngrok-stable-linux-amd64.zip
           chmod +x ngrok
@@ -35,28 +35,28 @@ jobs:
 
       - name: Start ngrok TCP tunnel
         run: |
-          # Retrieve the ngrok authtoken from GitHub secrets
+          # Recupera el token de autenticación de ngrok desde los secretos de GitHub
           NGROK_AUTH_TOKEN=${{ secrets.NGROK_AUTH_TOKEN }}
-
-          # Authenticate ngrok using the authtoken
           ngrok authtoken $NGROK_AUTH_TOKEN
-
-          # Start ngrok with port 3389 (RDP) in the EU region
           ngrok tcp --region eu 3389 &
 
-          # Sleep for a few seconds to ensure ngrok is running
+          # Espera unos segundos para asegurarse de que ngrok esté en funcionamiento
           sleep 5
 
-          # Get the public IP address provided by ngrok
+          # Obtiene la dirección IP pública proporcionada por ngrok
           public_ip=$(curl -s http://localhost:4040/api/tunnels | jq -r '.tunnels[0].public_url')
 
-          # Output the public IP address
+          # Muestra la dirección IP pública
           echo "Public IP Address: $public_ip"
+
+      - name: Run Docker container
+        run: |
+          docker run -d albertlnz/laravel:latest
 
       - name: Keep Alive
         run: |
-          # Add a long-running command to keep the workflow alive
+          # Añade un comando de larga duración para mantener viva la ejecución del flujo de trabajo
           while true; do
             echo "Workflow is running..."
-            sleep 5184000  # Sleep for 1 hour
+            sleep 5184000  # Duerme durante 1 hora
           done
