--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
 
       - name: Pull Docker image
         run: |
-          docker pull tu_usuario/tu_imagen:tu_tag
+          docker pull albertlnz/laravel:latest
 
       - name: Install xrdp and configure for root
         run: |
